# rx888

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
packaging/: README.md
packaging/homebrew/: sddc.rb
src/core/: CMakeLists.txt  FX3Class.h  RadioHandler.cpp  RadioHandler.h  fft_mt_r2iq.cpp  fft_mt_r2iq.h  fft_mt_r2iq_avx.cpp  fft_mt_r2iq_avx2.cpp  fft_mt_r2iq_avx512.cpp  fft_mt_r2iq_def.cpp  fft_mt_r2iq_impl.hpp  fft_mt_r2iq_neon.cpp  hardware.h  r2iq.h
src/core/arch/linux/: FX3handler.cpp  FX3handler.h
src/core/arch/win32/: FX3handler.cpp  FX3handler.h
src/core/arch/win32/CyAPI/: CyAPI.cpp
src/core/radio/: BBRF103Radio.cpp  HF103Radio.cpp  RX888R2Radio.cpp  RX888R3Radio.cpp  RX999Radio.cpp  RXLucy.cpp  RadioHardware.cpp  RadioHardware.h
src/extio/: CMakeLists.txt  ExtIO_sddc.cpp
src/firmware/: Application.h  DebugConsole.c  RunApplication.c  SDDC_GPIF.h  StartStopApplication.c  StartUP.c  Support.c  USBdescriptor.c  USBhandler.c  cyfxtx.c  i2cmodule.c  i2cmodule.h  makefile  pcal6408a.c  pcal6408a.h
src/libsddc/: CMakeLists.txt  libsddc.cpp  libsddc.h  sddc.1  sddc.cpp  sddc.h  sddc_stream_test.c  sddc_stream_test.cpp  sddc_test.c  sddc_vhf_stream_test.c  sddc_vhf_stream_test.cpp  win_clock.h
src/soapy/: CMakeLists.txt  Registration.cpp  Settings.cpp  SoapySDDC.hpp  Streaming.cpp
src/tests/: CMakeLists.txt  core_test.cpp  sddc_test.cpp
